# coq

./: .gitignore  coq-core.opam  dune  dune-project  tracing.md
clib/: exninfo.ml  exninfo.mli  genRef.ml  genRef.mli  option.ml  option.mli
config/: dune
dev/: top_printers.ml  top_printers.mli  vm_printers.ml
dev/shim/: dune
engine/: dune  ftactic.ml  ftactic.mli  logic_monad.ml  proofview.ml  proofview.mli  proofview_monad.ml  proofview_monad.mli
interp/: constrextern.ml  constrextern.mli  dune
kernel/: constr.ml  constr.mli  names.ml  names.mli
lib/: cErrors.ml  dune  flags.ml  flags.mli  pp.ml  pp.mli  util.ml  util.mli
plugins/funind/: g_indfun.mlg  g_indfun.mli  (+2 more)
pretyping/: constr_matching.ml  detyping.ml  genarg.ml  genarg.mli  geninterp.ml  geninterp.mli  globEnv.ml  ltac_pretype.mli
printing/: genprint.ml  genprint.mli  ppconstr.ml  ppconstr.mli  pputils.ml  pputils.mli
proofs/: dune  proof.ml  proof.mli  proof_bullet.ml  proof_bullet.mli  refine.ml  tacmach.ml  tacmach.mli  tactypes.mli
stm/: partac.ml  stm.ml
tactics/: auto.ml  autorewrite.ml  class_tactics.ml  equality.ml  hints.ml  hipattern.ml  induction.ml  induction.mli  inv.ml  rewrite.ml  tacticals.mli  tactics.ml  tactics.mli
topbin/: coqtop_byte_bin.ml
toplevel/: ccompile.ml  coqtop.ml  dune
vernac/: comAssumption.ml  comDefinition.ml  comDefinition.mli  comFixpoint.ml  comInductive.ml  comInductive.mli  comTactic.ml  comTactic.mli  declare.ml  declare.mli  dune  ppvernac.ml  record.ml  record.mli  vernacentries.ml  vernacentries.mli  vernacextend.ml  vernacinterp.ml
(+50 files in other folders)
