(library
 (name interp)
 (synopsis "Coq's Syntactic Interpretation for AST [notations, implicits]")
 (public_name coq-core.interp)
 (wrapped false)
 (modules_without_implementation constrexpr notation_term)
 (libraries zarith pretyping gramlib yojson ppx_yojson_conv)
 (preprocess (pps ppx_yojson_conv)))
